kustomize/overlays/docker-desktop/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rabbitmq-hello-world
  namespace: hello-world
  labels:
    app.kubernetes.io/component: rabbitmq
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`rabbitmq-hello-world.jayamorin.com`)
      services:
        - kind: Service
          name: rabbitmq-hello-world
          namespace: hello-world
          port: 15672
